--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="typed-text d-none">Ingeniero de Soporte Técnico, Desarrollador Web, Desarrollador de
                         Escritorio, Técnico en ciberseguridad</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="/documents/CV Enethel Mendoza.pdf" class="btn btn-outline-light mr-5">Descargar CV</a>
+                        <a href="documents/CV Enethel Mendoza.pdf" class="btn btn-outline-light mr-5">Descargar CV</a>
                         <button type="button" class="btn-play" data-toggle="modal"
                             data-src="https://www.youtube.com/watch?v=U6A7Iv0RbdA" data-target="#videoModal">
                             <span></span>
